Fix misalignment between delay icon and respawn icon

--- a/src/components/dialogs/factions.scss
+++ b/src/components/dialogs/factions.scss
@@ -267,7 +267,6 @@
                     .delay {
                         display: flex;
                         align-items: center;
-                        justify-content: flex-end;
                         gap: 0.3em;
                         .delay-icon {
                             width: 1em;
